tests/ui/feature-gates/feature-gate-f128.stderr
error[E0658]: the feature `f128` is unstable
  --> $DIR/feature-gate-f128.rs:5:14
   |
LL |     const A: f128 = 10.0;
   |              ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the feature `f128` is unstable
  --> $DIR/feature-gate-f128.rs:8:16
   |
LL |         let a: f128 = 100.0;
   |                ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the feature `f128` is unstable
  --> $DIR/feature-gate-f128.rs:13:15
   |
LL |     fn foo(a: f128) {}
   |               ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the feature `f128` is unstable
  --> $DIR/feature-gate-f128.rs:16:12
   |
LL |         a: f128,
   |            ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the feature `f128` is unstable
  --> $DIR/feature-gate-f128.rs:9:17
   |
LL |         let b = 0.0f128;
   |                 ^^^^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f128)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
